--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,6 +10,9 @@ add_mocked_test(oath
         SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/emubd/lfs_emubd.c
         LINK_LIBRARIES canokey-core)
 
+add_mocked_test(apdu
+        LINK_LIBRARIES canokey-core)
+
 add_mocked_test(fido2
         SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../littlefs/emubd/lfs_emubd.c
         LINK_LIBRARIES canokey-core)
