--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ if (ENABLE_TESTS)
 endif (ENABLE_TESTS)
 add_subdirectory(canokey-crypto)
 
-file(GLOB SRC src/*.c littlefs/*.c ctap/*.c openpgp/*.c piv/*.c oath/*.c admin/*.c tinycbor/src/cborencoder.c tinycbor/src/cborparser.c)
+file(GLOB SRC src/*.c littlefs/*.c applets/ctap/*.c applets/openpgp/*.c applets/piv/*.c applets/oath/*.c applets/admin/*.c tinycbor/src/cborencoder.c tinycbor/src/cborparser.c)
 add_library(canokey-core ${SRC})
 target_include_directories(canokey-core SYSTEM PUBLIC include littlefs tinycbor/src)
 target_link_libraries(canokey-core canokey-crypto)
