increase coverage of PIV

--- a/.travis.yml
+++ b/.travis.yml
@@ -103,6 +103,9 @@ script:
   - gpg --pinentry-mode loopback --passphrase-file=/tmp/passwd -d /tmp/enc.gpg
   - gpgconf --kill gpg-agent
   - # PIV tests:
+  - yubico-piv-tool -r "" -a status
+  - opensc-tool -s '00 F8 00 00' | grep 'SW1=0x90, SW2=0x00' # PIV_INS_GET_SERIAL, Yubico
+  - opensc-tool -s '00 FD 00 00' | grep 'SW1=0x90, SW2=0x00' # PIV_INS_GET_VERSION, Yubico
   - pkcs15-tool -D
   - yubico-piv-tool -r "" -a verify-pin -P 123456
   - yubico-piv-tool -r "" -a change-pin -P 123456 -N 654321
