--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ script:
   -
   - sudo killall -9 pcscd || true
   - sudo cp build/libu2f-virt-card.so /usr/local/lib/
-  - sudo cp pcscd-reader.conf /etc/reader.conf.d/
+  - sudo cp test-via-pcsc/pcscd-reader.conf /etc/reader.conf.d/
   - travis_wait 3 sudo pcscd -a -f >/tmp/pcscd.log &
   - sleep 3
   - timeout 1s pcsc_scan || true
@@ -67,7 +67,7 @@ script:
   - ~/.local/bin/pytest --color=yes --nfc tests/standard/
   - popd
   - # OATH test:
-  - go test virt-card/oath_test.go
+  - go test test-via-pcsc/oath_test.go
   - # U2F tests:
   - echo 0 | ./u2f-ref-code/u2f-tests/NFC/u2f_nfc_test -v | tee /tmp/u2f_nfc_test.log
   - test $(grep -c 'PASS(signCheckSignature(regReq, regRsp, authReq, authRsp, rapduLen))' /tmp/u2f_nfc_test.log) -eq 6
