add admin applet test

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,12 +62,14 @@ script:
   - travis_wait 3 sudo pcscd -a -f >/tmp/pcscd.log &
   - sleep 3
   - timeout 1s pcsc_scan || true
+  - # ADMIN test:
+  - go test -v test-via-pcsc/admin_test.go
   - # FIDO2 test:
   - pushd fido2-tests
   - ~/.local/bin/pytest --color=yes --nfc tests/standard/
   - popd
   - # OATH test:
-  - go test test-via-pcsc/oath_test.go
+  - go test -v test-via-pcsc/oath_test.go
   - # U2F tests:
   - echo 0 | ./u2f-ref-code/u2f-tests/NFC/u2f_nfc_test -v | tee /tmp/u2f_nfc_test.log
   - test $(grep -c 'PASS(signCheckSignature(regReq, regRsp, authReq, authRsp, rapduLen))' /tmp/u2f_nfc_test.log) -eq 6
