Fix test error again

--- a/.travis.yml
+++ b/.travis.yml
@@ -171,4 +171,4 @@ script:
   - yubico-piv-tool -r "" -a unblock-pin -P 12345678 -N 123456 2>&1 | grep 'Successfully unblocked the pin code'
   - sudo killall pcscd || true
   - cat /tmp/pcscd.log
-  - coveralls -b build --exclude canokey-crypto --exclude virt-card --exclude u2f-ref-code --exclude tinycbor --exclude littlefs --exclude test --gcov-options '\-lp'
+  - coveralls -b build --exclude canokey-crypto --exclude virt-card --exclude u2f-ref-code --exclude tinycbor --exclude littlefs --exclude test --excluse interfaces --gcov-options '\-lp'
