--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,10 @@ addons:
       - pcscd
       - pcsc-tools
       - yubico-piv-tool
-      - gnupg2
+      - libassuan-dev
+      - libgcrypt20-dev
+      - libksba-dev
+      - libnpth0-dev
       - scdaemon
       - opensc
       - openssl
@@ -30,6 +33,7 @@ addons:
       - python3-setuptools
       - python3-wheel
 install:
+  - ./test-via-pcsc/build_gpg.sh # Build latest GPG
   - git clone --depth 1 https://github.com/google/u2f-ref-code.git
   - pushd u2f-ref-code/u2f-tests/HID
   - git clone --depth 1 -b lollipop-release https://android.googlesource.com/platform/system/core
@@ -84,7 +88,10 @@ script:
   - echo -e 'key 1\nkeytocard\n1\nsave' | gpg --yes --command-fd 0 --pinentry-mode loopback --passphrase-file=/tmp/passwd --batch --edit-key $KEYID # key[1] to Signature key
   - echo -e 'key 2\nkeytocard\n2\nsave' | gpg --yes --command-fd 0 --pinentry-mode loopback --passphrase-file=/tmp/passwd --batch --edit-key $KEYID # key[2] to Encryption key
   - echo -e 'key 3\nkeytocard\n3\nsave' | gpg --yes --command-fd 0 --pinentry-mode loopback --passphrase-file=/tmp/passwd --batch --edit-key $KEYID # key[3] to Authentication key
-  - echo -e 'admin\nname\nfirstname\nlastname\nurl\nexample.com\nlogin\nmyuserid\nsex\nm\nlist\nquit' | gpg --yes --command-fd 0 --pinentry-mode loopback --passphrase-file=/tmp/passwd --batch --edit-card
+  - echo -e 'admin\nname\nfirstname\nlastname\nurl\nexample.com\nlogin\nmyuserid\nlang\ncn\nsex\nm\nquit' | gpg --yes --command-fd 0 --pinentry-mode loopback --passphrase-file=/tmp/passwd --batch --edit-card
+  - echo -e 'admin\ncafpr 2\n9914 B3B0 BF7E 3B12 DB72  8AC7 3695 10EC DF14 672E\ncafpr 1\nEC17 49B4 C512 6CD3 080C  85CA 0088 068F 1016 5897\ncafpr 3\nAC4D DD51 6C35 D8E2 7153  BB3B 4BD8 4023 BC79 46F0\nquit' | gpg --yes --command-fd 0 --pinentry-mode loopback --passphrase-file=/tmp/passwd --batch --edit-card
+  - gpgconf --kill gpg-agent # restart agent to clear cached info
+  - gpg --card-status
   - echo 123456 >/tmp/passwd
   - "echo -n hello | gpg --armor --pinentry-mode loopback --passphrase-file=/tmp/passwd --default-key $(gpg -K --with-colons|awk -F: '$1 ~ /ssb/ && $12 ~ /s/ {print $5}'|tail -n 1) -s >/tmp/sign.gpg"
   - gpg </tmp/sign.gpg
