--- a/.travis.yml
+++ b/.travis.yml
@@ -79,7 +79,7 @@ script:
   - echo 0 | ./u2f-ref-code/u2f-tests/NFC/u2f_nfc_test -v | tee /tmp/u2f_nfc_test.log
   - test $(grep -c 'PASS(signCheckSignature(regReq, regRsp, authReq, authRsp, rapduLen))' /tmp/u2f_nfc_test.log) -eq 6
   - # OpenPGP tests:
-  - pkill gpg-agent
+  - pkill gpg-agent || true
   - gpg --version
   - mkdir /tmp/mock
   - echo 12345678 >"/tmp/mock/Passphrase:"
