--- a/.travis.yml
+++ b/.travis.yml
@@ -89,17 +89,17 @@ script:
   - echo 123456 >"/tmp/mock/PIN"
   - "echo -e 'Key-Type: 1\\nKey-Length: 2048\\nSubkey-Type: 1\\nSubkey-Length: 2048\\nName-Real: Someone\\nName-Email: foo@example.com\\nPassphrase: 12345678\\n%commit\\n%echo done' | gpg --batch --gen-key"
   - KEYID=$(gpg -K --with-colons |grep -P '^sec'|grep -oP '\w{16}')
-  - echo -e 'addkey\n6\n2048\n0\nsave' | gpg --yes --command-fd 0 --batch --edit-key $KEYID # [2] encrypt key
-  - echo -e 'addkey\n4\n2048\n0\nsave' | gpg --yes --command-fd 0 --batch --edit-key $KEYID # [3] sign key
-  - echo -e 'key 1\nkeytocard\n1\nsave' | gpg --yes --command-fd 0 --batch --edit-key $KEYID # key[1] to Signature key
-  - echo -e 'key 2\nkeytocard\n2\nsave' | gpg --yes --command-fd 0 --batch --edit-key $KEYID # key[2] to Encryption key
-  - echo -e 'key 3\nkeytocard\n3\nsave' | gpg --yes --command-fd 0 --batch --edit-key $KEYID # key[3] to Authentication key
-  - echo -e 'admin\nname\nfirstname\nlastname\nurl\nexample.com\nlogin\nmyuserid\nlang\ncn\nsex\nm\nquit' | gpg --yes --command-fd 0 --batch --edit-card
-  - echo -e 'admin\nwritecert 3 </tmp/random.txt\nquit' | gpg --yes --command-fd 0 --batch --edit-card
-  - echo -e 'admin\ncafpr 2\n9914 B3B0 BF7E 3B12 DB72  8AC7 3695 10EC DF14 672E\ncafpr 1\nEC17 49B4 C512 6CD3 080C  85CA 0088 068F 1016 5897\ncafpr 3\nAC4D DD51 6C35 D8E2 7153  BB3B 4BD8 4023 BC79 46F0\nquit' | gpg --yes --command-fd 0 --batch --edit-card
+  - echo -e 'addkey\n6\n2048\n0\nsave' | gpg --yes --command-fd 0 --edit-key $KEYID # [2] encrypt key
+  - echo -e 'addkey\n4\n2048\n0\nsave' | gpg --yes --command-fd 0 --edit-key $KEYID # [3] sign key
+  - echo -e 'key 1\nkeytocard\n1\nsave' | gpg --yes --command-fd 0 --edit-key $KEYID # key[1] to Signature key
+  - echo -e 'key 2\nkeytocard\n2\nsave' | gpg --yes --command-fd 0 --edit-key $KEYID # key[2] to Encryption key
+  - echo -e 'key 3\nkeytocard\n3\nsave' | gpg --yes --command-fd 0 --edit-key $KEYID # key[3] to Authentication key
+  - echo -e 'admin\nname\nfirstname\nlastname\nurl\nexample.com\nlogin\nmyuserid\nlang\ncn\nsex\nm\nquit' | gpg --yes --command-fd 0 --edit-card
+  - echo -e 'admin\nwritecert 3 </tmp/random.txt\nquit' | gpg --yes --command-fd 0 --edit-card
+  - echo -e 'admin\ncafpr 2\n9914 B3B0 BF7E 3B12 DB72  8AC7 3695 10EC DF14 672E\ncafpr 1\nEC17 49B4 C512 6CD3 080C  85CA 0088 068F 1016 5897\ncafpr 3\nAC4D DD51 6C35 D8E2 7153  BB3B 4BD8 4023 BC79 46F0\nquit' | gpg --yes --command-fd 0 --edit-card
   - gpgconf --kill gpg-agent # restart agent to clear cached info
   - gpg --card-status
-  - echo -e 'readcert 3 >/tmp/random-read.txt\nquit' | gpg --yes --command-fd 0 --batch --edit-card
+  - echo -e 'readcert 3 >/tmp/random-read.txt\nquit' | gpg --yes --command-fd 0 --edit-card
   - diff /tmp/random-read.txt /tmp/random.txt
   - "echo -n hello | gpg --armor --default-key $(gpg -K --with-colons|awk -F: '$1 ~ /ssb/ && $12 ~ /s/ {print $5}'|tail -n 1) -s >/tmp/sign.gpg"
   - gpg </tmp/sign.gpg
@@ -107,17 +107,18 @@ script:
   - gpg </tmp/sign.gpg
   - "echo -n world | gpg --yes --armor --recipient $(gpg -K --with-colons | awk -F: '$1 ~ /ssb/ && $12 == \"e\" {print $5}') --encrypt >/tmp/enc.gpg"
   - gpg -d /tmp/enc.gpg
-  - echo -e 'admin\npasswd\n4\nq\nq' | gpg --yes --command-fd 0 --batch --edit-card # config reset code
-  - echo -e 'admin\nfactory-reset\ny\nyes' | gpg --command-fd 0 --batch --edit-card # clear all keys, no pin verification at all
+  - echo -e 'admin\npasswd\n1\n3\n4\nq\nq' | gpg --yes --command-fd 0 --edit-card # change PIN,Admin PIN,Reset Code
+  - echo -e 'admin\nfactory-reset\ny\nyes' | gpg --command-fd 0 --edit-card # clear all keys, no pin verification at all
   - gpg --card-status |grep -E 'Signature key.+none'
-  - echo -e 'addkey\n10\n3\n0\nsave' | gpg --expert --yes --command-fd 0 --batch --edit-key $KEYID # gen ecdsa P-256 key[4]
-  - echo -e 'key 4\nkeytocard\n1\nsave' | gpg --yes --command-fd 0 --batch --edit-key $KEYID # key[4] to Signature key
-  - echo -e 'addkey\n12\n3\n0\nsave' | gpg --expert --yes --command-fd 0 --batch --edit-key $KEYID # gen ecdsa P-256 key[5]
-  - echo -e 'key 5\nkeytocard\n2\nsave' | gpg --yes --command-fd 0 --batch --edit-key $KEYID # key[5] to Encryption key
+  - echo -e 'addkey\n10\n3\n0\nsave' | gpg --expert --yes --command-fd 0 --edit-key $KEYID # gen ecdsa P-256 key[4]
+  - echo -e 'key 4\nkeytocard\n1\nsave' | gpg --yes --command-fd 0 --edit-key $KEYID # key[4] to Signature key
+  - echo -e 'addkey\n12\n3\n0\nsave' | gpg --expert --yes --command-fd 0 --edit-key $KEYID # gen ecdsa P-256 key[5]
+  - echo -e 'key 5\nkeytocard\n2\nsave' | gpg --yes --command-fd 0 --edit-key $KEYID # key[5] to Encryption key
   - "echo -n hello3 | gpg --armor --default-key $(gpg -K --with-colons|awk -F: '$1 ~ /ssb/ && $12 ~ /s/ {print $5}'|tail -n 1) -s >/tmp/sign.gpg"
   - gpg </tmp/sign.gpg
   - "echo -n world2 | gpg --yes --armor --recipient $(gpg -K --with-colons | awk -F: '$1 ~ /ssb/ && $12 == \"e\" {print $5}'|tail -n 1) --encrypt >/tmp/enc.gpg"
   - gpg -d /tmp/enc.gpg
+  - echo -e 'addcardkey\n3\n2048\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Authentication key on card
   - gpgconf --kill gpg-agent
   - # PIV tests:
   - yubico-piv-tool -r "" -a status
