finish ctaphid loop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,13 @@ include(FindPkgConfig)
 project(canokey-core C)
 
 option(ENABLE_TESTS "Perform unit tests after build" OFF)
+option(ENABLE_DEBUG_OUTPUT "Print debug messages" ON)
 if (ENABLE_TESTS)
     set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 endif (ENABLE_TESTS)
+if (ENABLE_DEBUG_OUTPUT)
+    add_definitions(-DDEBUG_OUTPUT)
+endif (ENABLE_DEBUG_OUTPUT)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -g -Wall -fstack-usage -fno-omit-frame-pointer --coverage")
