FIX aut key ecdsa sign error & use custom sn

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,14 @@ if (ENABLE_TESTS)
 endif (ENABLE_TESTS)
 add_subdirectory(canokey-crypto)
 
-file(GLOB_RECURSE SRC src/*.c applets/*.c
-        littlefs/lfs.c littlefs/lfs_util.c
-        tinycbor/src/cborencoder.c tinycbor/src/cborparser.c)
-if (NOT ENABLE_TESTS)
-    file(GLOB_RECURSE SRC interfaces/*.c)
+if (ENABLE_TESTS)
+    file(GLOB_RECURSE SRC src/*.c applets/*.c
+            littlefs/lfs.c littlefs/lfs_util.c
+            tinycbor/src/cborencoder.c tinycbor/src/cborparser.c)
+else ()
+    file(GLOB_RECURSE SRC src/*.c applets/*.c interfaces/*.c
+            littlefs/lfs.c littlefs/lfs_util.c
+            tinycbor/src/cborencoder.c tinycbor/src/cborparser.c)
 endif (ENABLE_TESTS)
 add_library(canokey-core ${SRC})
 target_include_directories(canokey-core SYSTEM
