--- a/.travis.yml
+++ b/.travis.yml
@@ -95,6 +95,7 @@ script:
   - Key2card() { echo -e "key $1\nkeytocard\n$2\nsave" | gpg --yes --command-fd 0 --edit-key $KEYID; gpg --card-status; }
   - "GPGSign() { date -Iseconds | gpg --armor --default-key $(gpg -K --with-colons|awk -F: '$1~/ssb/ && $12~/s/ {print $5}'|tail -n 1) -s|gpg; }"
   - "GPGEnc()  { date -Iseconds | gpg --yes --armor --recipient $(gpg -K --with-colons | awk -F: '$1~/ssb/ && $12~/e/ {print $5}'|tail -n 1) --encrypt|gpg; }"
+  - GPGReset() { echo -e 'admin\nfactory-reset\ny\nyes' | gpg --command-fd 0 --edit-card; } # clear all keys, no pin verification at all
   - Key2card 1 1 # key[1] to Signature key
   - GPGSign
   - Addkey 12 3 # [2] ECDH P-256 encrypt key
@@ -111,7 +112,7 @@ script:
   - echo -e 'readcert 3 >/tmp/random-read.txt\nquit' | gpg --yes --command-fd 0 --edit-card
   - diff /tmp/random-read.txt /tmp/random.txt
   - echo -e 'admin\npasswd\n1\n3\n4\nq\nforcesig\nq' | gpg --yes --command-fd 0 --edit-card # change PIN,Admin PIN,Reset Code
-  - echo -e 'admin\nfactory-reset\ny\nyes' | gpg --command-fd 0 --edit-card # clear all keys, no pin verification at all
+  - GPGReset
   - gpg --card-status |grep -E 'Signature key.+none'
   - Addkey 4 2048 # [4] gen RSA2048 key
   - Key2card 4 3 # key[4] to Authentication key
@@ -122,7 +123,7 @@ script:
   - Addkey 10 3 # [6] gen ECDSA P-256 key
   - Key2card 6 1 # key[6] to Signature key
   - GPGSign
-  - echo -e 'admin\nfactory-reset\ny\nyes' | gpg --command-fd 0 --edit-card # clear all keys, no pin verification at all
+  - GPGReset
   - Addkey 12 1 # [7] cv25519 encrypt key
   - Addkey 10 1 # [8] ed25519 sign key
   - Key2card 7 2 # key[7] to Encryption key
@@ -132,13 +133,26 @@ script:
   - Addkey 10 1 # [9] ed25519 sign key
   - Key2card 9 1 # key[9] to Signature key
   - GPGSign
-  - echo -e 'admin\nfactory-reset\ny\nyes' | gpg --command-fd 0 --edit-card # clear all keys, no pin verification at all
-  - echo -e 'admin\nkey-attr\n2\n1\n2\n1\n2\n1\n' | gpg --command-fd 0 --yes --expert --edit-card # key-attr set to 25519
+  - GPGReset
+  - echo -e 'admin\nkey-attr\n2\n1\n2\n1\n2\n1\n' | gpg --command-fd 0 --yes --expert --edit-card
+  - echo -e 'admin\nkey-attr\n1\n2048\n1\n2048\n1\n2048\n' | gpg --command-fd 0 --yes --expert --edit-card # key-attr set to RSA2048
   - echo -e 'addcardkey\n1\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Signature key on card
   - echo -e 'addcardkey\n2\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Encryption key on card
-  - #echo -e 'addcardkey\n3\n2048\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Authentication key on card
   - GPGEnc
   - GPGSign
+  - GPGReset
+  - echo -e 'admin\nkey-attr\n2\n1\n2\n1\n2\n1\n' | gpg --command-fd 0 --yes --expert --edit-card # key-attr set to 25519
+  - echo -e 'addcardkey\n2\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Encryption key on card
+  - echo -e 'addcardkey\n3\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Authentication key on card
+  - GPGEnc
+  - GPGSign
+  - GPGReset
+  - echo -e 'admin\nkey-attr\n2\n3\n2\n3\n2\n3\n' | gpg --command-fd 0 --yes --expert --edit-card # key-attr set to ECC P-256
+  - echo -e 'addcardkey\n1\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Signature key on card
+  - echo -e 'addcardkey\n2\n0\nsave\n' | gpg --expert --command-fd 0 --yes --edit-key $KEYID # generate Encryption key on card
+  - GPGEnc
+  - GPGSign
+  - GPGReset
   - gpgconf --kill gpg-agent
   - # PIV tests:
   - RDID=" 01"
